dark mode icon fix

--- a/src/assets/sass/local.scss
+++ b/src/assets/sass/local.scss
@@ -995,7 +995,7 @@
 
       .cs-icon {
         /* turns it white */
-        filter: grayscale(1) brightness(1000%);
+        filter: invert(1);
       }
 
       .cs-title,
